--- a/AppVOD/IHM/VOD/FenetreFilm.xaml
+++ b/AppVOD/IHM/VOD/FenetreFilm.xaml
@@ -1,7 +1,10 @@
-﻿<Window x:Class="AppVOD.IHM.VOD.FenetreFilm"
+﻿<Window 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    x:Class="AppVOD.IHM.VOD.FenetreFilm"
     Title="Film à ajouter" Height="500" Width="434" ResizeMode="NoResize">
+    
+    
     <Window.Resources>
         <DataTemplate x:Key="ModeleGenre">
             <StackPanel Orientation="Horizontal">
@@ -23,6 +26,7 @@
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -49,9 +53,8 @@
         <ComboBox Margin="10" Name="selecteurPays" Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Source={StaticResource ModelePays}}"/>
         <ComboBox Margin="10" Name="selecteurMetteurEnScene" Grid.Row="4" Grid.Column="1" ItemsSource="{Binding Source={StaticResource ModeleArtiste}}"/>
 
-
         <StackPanel Margin="20" Grid.Row="5"  Grid.ColumnSpan="2"  Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button IsDefault="True" Width="70" Click="Ok">Ok</Button>
+            <Button IsDefault="True" Width="70" Click="Ok">Oui</Button>
             <Border Margin="50, 0,0,0"/>
             <Button IsCancel="True"  Width="70" >Annuler</Button>
         </StackPanel>
