--- a/AppVOD/IHM/VOD/FenetreVOD.xaml
+++ b/AppVOD/IHM/VOD/FenetreVOD.xaml
@@ -93,7 +93,7 @@
                         <ColumnDefinition Width="270*"/>
                         <ColumnDefinition Width="392*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView  Margin="5" Grid.Column="0" Name="listeAbonnes" SelectionChanged="AfficherAbonne" Grid.ColumnSpan="3">
+                    <ListView  Margin="5" Grid.Column="0" Name="listeAbonnes" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
                                 <GridView.Columns>
@@ -159,7 +159,7 @@
                         <ColumnDefinition Width="270*"/>
                         <ColumnDefinition Width="392*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView  Margin="5" Grid.Column="0" Name="listeOffres" SelectionChanged="AfficherOffre" Grid.ColumnSpan="3">
+                    <ListView  Margin="5" Grid.Column="0" Name="listeOffres" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
                                 <GridView.Columns>
@@ -200,7 +200,7 @@
                             </TextBlock>
                         </Label>
                         
-                        <ListView Margin="5,5,5,58" Name="listeFilms" Grid.Row="3" Grid.Column="1" Grid.RowSpan="5" ItemsSource="{Binding Path=Films}" SelectionChanged="AfficherFilm">
+                        <ListView Margin="5,5,5,58" Name="listeFilms" Grid.Row="3" Grid.Column="1" Grid.RowSpan="5" ItemsSource="{Binding Path=Films}" >
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="{x:Type ListViewItem}">
                                     <Setter Property="ToolTip">
