--- a/AppVOD/App.xaml
+++ b/AppVOD/App.xaml
@@ -3,4 +3,4 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="IHM/VOD/FenetreVOD.xaml"
 />
-<!--  StartupUri="IHM/VOD/FenetreVOD.xaml" -->
+<!--  StartupUri="IHM/Filmo/FenetreFilmo.xaml" -->
