--- a/AppVOD/MaVOD.xaml
+++ b/AppVOD/MaVOD.xaml
@@ -12,6 +12,12 @@
 				<filmo:Acteur x:Name="ajolie" Nom="Jolie" Prenom="Angelina" />
 				<filmo:Acteur x:Name="ldicaprio" Nom="Dicaprio" Prenom="Leonardo" />
 				<filmo:Acteur x:Name="mmcconaughey" Nom="Mcconaughey" Prenom="Matthew" />
+				<filmo:Acteur x:Name="rpattinson" Nom="Pattinson" Prenom="Robert" />
+				<filmo:Acteur x:Name="ahathaway" Nom="Hathaway" Prenom="Anne" />
+				<filmo:Acteur x:Name="cbale" Nom="Bale" Prenom="Christian" />
+				<filmo:Acteur x:Name="thardy" Nom="Hardy" Prenom="Tom" />
+				<filmo:Acteur x:Name="mfreeman" Nom="Freeman" Prenom="Morgan" />
+				<filmo:Acteur x:Name="jcarrey" Nom="Carrey" Prenom="Jim" />
 				<filmo:Acteur x:Name="tcruise" Nom="Cruise" Prenom="Tom" />
 				<filmo:Acteur x:Name="thanks" Nom="Hanks" Prenom="Tom" />
 				<filmo:Acteur x:Name="dwashington" Nom="Washington" Prenom="Denzel" />
@@ -30,6 +36,7 @@
 				<filmo:MetteurEnScene x:Name="dlynch" Nom="Lynch" Prenom="David" />
 				<filmo:MetteurEnScene x:Name="dfincher" Nom="Fincher" Prenom="David" />
 				<filmo:MetteurEnScene x:Name="cnolan" Nom="Nolan" Prenom="Christopher" />
+				<filmo:MetteurEnScene x:Name="tshadyac" Nom="Shadyac" Prenom="Tom" />
 
 			</filmo:Filmographie.Artistes>
 			<filmo:Filmographie.Films>
@@ -94,6 +101,47 @@
 					</filmo:Film.Roles>
 				</filmo:Film>
 
+				<filmo:Film x:Name="Tenet" Annee="2020" Genre="ScienceFiction" Pays="US" Titre="Tenet">
+					<filmo:Film.MetteurEnScene>
+						<x:Reference>cnolan</x:Reference>
+					</filmo:Film.MetteurEnScene>
+					<filmo:Film.Roles>
+						<filmo:Role Personnage="Neil">
+							<filmo:Role.Acteur>
+								<x:Reference>rpattinson</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+					</filmo:Film.Roles>
+				</filmo:Film>
+
+				<filmo:Film x:Name="TheDarkNightRises" Annee="2012" Genre="ScienceFiction" Pays="US" Titre="The Dark Night Rises">
+					<filmo:Film.MetteurEnScene>
+						<x:Reference>cnolan</x:Reference>
+					</filmo:Film.MetteurEnScene>
+					<filmo:Film.Roles>
+						<filmo:Role Personnage="Catwoman">
+							<filmo:Role.Acteur>
+								<x:Reference>ahathaway</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+						<filmo:Role Personnage="Batman">
+							<filmo:Role.Acteur>
+								<x:Reference>cbale</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+						<filmo:Role Personnage="Bane">
+							<filmo:Role.Acteur>
+								<x:Reference>thardy</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+						<filmo:Role Personnage="Lucius Fox">
+							<filmo:Role.Acteur>
+								<x:Reference>mfreeman</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+					</filmo:Film.Roles>
+				</filmo:Film>
+
 				<filmo:Film x:Name="Mrandmrssmith" Annee="2005" Genre="Action" Pays="US" Titre="Mr and Mrs Smith">
 					<filmo:Film.MetteurEnScene>
 						<x:Reference>dliman</x:Reference>
@@ -107,6 +155,24 @@
 						<filmo:Role Personnage="Jane Smith">
 							<filmo:Role.Acteur>
 								<x:Reference>ajolie</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+					</filmo:Film.Roles>
+				</filmo:Film>
+
+				<filmo:Film x:Name="BruceToutPuissant" Annee="2003" Genre="Comedie" Pays="US" Titre="Bruce tout-puissant">
+					<filmo:Film.MetteurEnScene>
+						<x:Reference>tshadyac</x:Reference>
+					</filmo:Film.MetteurEnScene>
+					<filmo:Film.Roles>
+						<filmo:Role Personnage="Bruce Nolan">
+							<filmo:Role.Acteur>
+								<x:Reference>jcarrey</x:Reference>
+							</filmo:Role.Acteur>
+						</filmo:Role>
+						<filmo:Role Personnage="Dieu">
+							<filmo:Role.Acteur>
+								<x:Reference>mfreeman</x:Reference>
 							</filmo:Role.Acteur>
 						</filmo:Role>
 					</filmo:Film.Roles>
@@ -154,14 +220,61 @@
 			</vod:Abonne.Souscriptions>
 		</vod:Abonne>
 
+		<vod:Abonne x:Name="lagethe" Nom="Laget" Prenom="Helene">
+			<vod:Abonne.Souscriptions>
+				<vod:Souscription Date="07.06.2020">
+					<vod:Souscription.Offre>
+						<x:Reference>FreeTrial</x:Reference>
+					</vod:Souscription.Offre>
+				</vod:Souscription>
+			</vod:Abonne.Souscriptions>
+		</vod:Abonne>
+
+		<vod:Abonne x:Name="lageter" Nom="Laget" Prenom="Eric">
+			<vod:Abonne.Souscriptions>
+				<vod:Souscription Date="09.12.2020">
+					<vod:Souscription.Offre>
+						<x:Reference>Premium</x:Reference>
+					</vod:Souscription.Offre>
+				</vod:Souscription>
+			</vod:Abonne.Souscriptions>
+		</vod:Abonne>
+
+		<vod:Abonne x:Name="rabineauto" Nom="Rabineau" Prenom="Tony">
+			<vod:Abonne.Souscriptions>
+				<vod:Souscription Date="02.03.2018">
+					<vod:Souscription.Offre>
+						<x:Reference>Premium</x:Reference>
+					</vod:Souscription.Offre>
+				</vod:Souscription>
+			</vod:Abonne.Souscriptions>
+		</vod:Abonne>
+
+		<vod:Abonne x:Name="rabineaulau" Nom="Rabineau" Prenom="Laurène">
+			<vod:Abonne.Souscriptions>
+				<vod:Souscription Date="04.04.2019">
+					<vod:Souscription.Offre>
+						<x:Reference>Standard</x:Reference>
+					</vod:Souscription.Offre>
+				</vod:Souscription>
+			</vod:Abonne.Souscriptions>
+		</vod:Abonne>
 
 	</vod:VOD.Abonnes>
 	<vod:VOD.Offres>
 
+
+		<vod:Offre x:Name="FreeTrial" Nom="FreeTrial" Cout="0">
+			<vod:Offre.Films>
+				<x:Reference>Vertigo</x:Reference>
+			</vod:Offre.Films>
+		</vod:Offre>
+		
 		<vod:Offre x:Name="Standard" Nom="Normal" Cout="5">
 			<vod:Offre.Films>
 				<x:Reference>Vertigo</x:Reference>
 				<x:Reference>Murder</x:Reference>
+				<x:Reference>Mrandmrssmith</x:Reference>
 			</vod:Offre.Films>
 		</vod:Offre>
 
@@ -172,7 +285,9 @@
 				<x:Reference>Mrandmrssmith</x:Reference>
 				<x:Reference>Inception</x:Reference>
 				<x:Reference>Interstellar</x:Reference>
-
+				<x:Reference>TheDarkNightRises</x:Reference>
+				<x:Reference>Tenet</x:Reference>
+				<x:Reference>BruceToutPuissant</x:Reference>
 			</vod:Offre.Films>
 		</vod:Offre>
 	</vod:VOD.Offres>
